More refactoring work. STILL BROKEN, DO NOT USE.